--- a/examples/css/drag_points.css
+++ b/examples/css/drag_points.css
@@ -28,7 +28,8 @@ html, body{
     margin-top: -276px;
     width: 512px;
     height: 512px;
-    background-color: #FFF;
+    background-image: url(../img/background.jpg);
+    
     
     border: 20px solid #FFF;
     -moz-box-shadow: 0 0 30px #CCC;
@@ -41,7 +42,7 @@ html, body{
     position: absolute;
     width: 512px;
     height: 512px;
-    background-image: url(../img/lenna.jpg);
+    background-image: url(../img/20130803103756562182.jpg);
 }
 .pt {
     position: absolute;
