--- a/examples/css/drag_points.css
+++ b/examples/css/drag_points.css
@@ -28,7 +28,7 @@ html, body{
     margin-top: -276px;
     width: 512px;
     height: 512px;
-    background-image: url(../img/background.jpg);
+    background: url(../img/background.jpg) 0% 0% / 100% 100;
     
     
     border: 20px solid #FFF;
@@ -40,8 +40,6 @@ html, body{
 }
 .img {
     position: absolute;
-    width: 512px;
-    height: 512px;
     background-image: url(../img/20130803103756562182.jpg);
 }
 .pt {
